# challenges

./: manage.py  pyproject.toml
challenges/: settings.py  urls.py
monthly/: urls.py  views.py
monthly/templates/monthly/: index.html  monthly_challenge.html
monthly/templates/monthly/includes/: header.html
templates/: 404.html  base.html
